--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@ a:focus,
 button:focus {
 	outline: none !important;
 }
-
+header{
+    background-color: #2c3e50; /*Tomate*/
+    color: #fff;
+    padding: 20px 0;
+}
 button {
 	background: none;
 	border: none;
