--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ a:focus,
 button:focus {
 	outline: none !important;
 }
+.swiper-container {
+    width: 80%;     /* o el valor que desees */
+    height: 400px;  /* o el valor que desees */
+}
 header{
     background-color: #2c3e50; /*Tomate*/
     color: #fff;
