--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,16 @@ button:focus {
     width: 80%;     /* o el valor que desees */
     height: 200px;  /* o el valor que desees */
 }
-header{
+header{			/*Fondo en el header */
     background-color: #2c3e50; /*Tomate*/
     color: #fff;
     padding: 20px 0;
 }
+.rd-navbar-panel { /*Modificacion del tamaño en la barra de navegacion */
+  width: 300px; /* o el tamaño que prefieras */
+  height: 60px; /* ajusta según tus necesidades */
+}
+
 button {
 	background: none;
 	border: none;
